@@ -1,3 +1,9 @@
+2007-01-22  Benoît Dejean  <benoit@placenet.org>
+
+	* src/interface.cpp:
+	
+	Little cleanup.
+
 2007-01-20  Benoît Dejean  <benoit@placenet.org>
 
 	* src/util.cpp (SI_gnome_vfs_format_file_size_for_display):
